syntax = "proto3";
package quicksilver.interchainstaking.v1;

import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";

option go_package = "github.com/ingenuity-build/quicksilver/x/interchainstaking/types";

message Params_v1 {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  uint64 deposit_interval = 1;
  uint64 validatorset_interval = 2;
  string commission_rate = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
}

message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_stringer) = false;

  uint64 deposit_interval = 1;
  uint64 validatorset_interval = 2;
  string commission_rate = 3 [
    (cosmos_proto.scalar) = "cosmos.Dec",
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  bool unbonding_enabled = 4;
}